// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab /> renders .action correctly 1`] = `
<div
  className="talixo-tab action"
>
  <span
    key=".0"
  >
    Tab
  </span>
</div>
`;

exports[`<Tab /> renders active correctly 1`] = `
<div
  className="talixo-tab active"
>
  <span
    key=".0"
  >
    Tab
  </span>
</div>
`;

exports[`<Tab /> renders children correctly 1`] = `
<div
  className="talixo-tab"
>
  <span
    key=".0"
  >
    Tab
  </span>
</div>
`;
